--- a/E-State/BusinessLayer/BusinessLayer.csproj
+++ b/E-State/BusinessLayer/BusinessLayer.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\EntityLayer\EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.4.0" />
+  </ItemGroup>
+
 </Project>
